# FreeAssetFilter

./: .gitattributes  .gitignore  FAFVERSION  LICENSE  Nuitka_build.py  Pyinstall_build.py  README.md  README_EN.md  _tmp_run_ui.py  analyze_card_styles.py  analyze_unselect_colors.py  build.py  check_exact.py  component_launcher.py  create_large_file.py  dark_mode_fix_analysis.md  demo_custom_value_bar.py  demo_custom_value_bar_vertical.py  demo_custom_widgets.py  diagnose_theme.py  direct_svg_test.py  figma_response.txt  finder.py  fix_encoding.py  hex_color_test.py  main.py  requirements.txt  reset_settings.py  setup.py  simple_svg_test.py  simple_test.py  test_adaptive_input.py  test_archive_browser.py  test_archive_fix.py  test_archive_preview.py  test_button_dark_mode.py  test_button_example.py  test_button_resolution.py  test_button_state_fix.py  test_button_visibility.py  (+139 more)
data/: lut.cube
data/timeline/: timeline_20251230机关元旦晚会_20260101_211411.csv
freeassetfilter/: __init__.py
freeassetfilter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
freeassetfilter/app/: __init__.py  main.py
freeassetfilter/components/: __init__.py  archive_browser.py  auto_timeline.py  custom_file_selector.py  ff_video_player.py  file_info_previewer.py  file_selector.py  file_staging_pool.py  folder_content_list.py  font_previewer.py  native_pdf_renderer.py  pdf_previewer.py  photo_viewer.py  settings_window.py  text_previewer.py  theme_editor.py  theme_manager.py  unified_previewer.py  update_controller.py  video_player.py
freeassetfilter/core/: __init__.py  _paths.py  color_extractor.py  component_launcher.py  ffplayer_core.py  file_info_browser.py  finder.py  folder_timeline_generator.py  heartbeat_manager.py  image_color_utils.py  lut_preview_generator.py  media_probe.py  mpv_manager.py  mpv_player_core.py  player_core.py  py7z_core.py  rust_thumbnail_bridge.py  settings_manager.py  svg_renderer.py  theme_manager.py  thumbnail_cleaner.py  thumbnail_manager.py  timeline_generator.py  timeline_layout.py  timeline_models.py  timeline_transformers.py  update_manager.py  video_frame_renderer.py
freeassetfilter/core/native/thumbnail_rust/: Cargo.toml
freeassetfilter/core/native/thumbnail_rust/src/: lib.rs
freeassetfilter/core/thumbnail_generator/: CMakeLists.txt  DEPENDENCIES.md  README.md  build.bat  build.ps1  build.ps1.fixed  build.ps1.new  build.sh  build_new.ps1  python_example.py  test_basic.ps1  test_basic.sh
freeassetfilter/core/thumbnail_generator/cmake/: opencv_dummy.hpp.in
freeassetfilter/core/thumbnail_generator/src/: image_utils.cpp  logger.cpp  main.cpp  processor.cpp  result.cpp
freeassetfilter/core/thumbnail_generator/src/include/: image_utils.h  logger.h  processor.h  result.h
freeassetfilter/services/: __init__.py  base.py  drive_service.py  favorites_repository.py  favorites_service.py  file_icon_manager.py  file_service.py  image_decode_worker.py  image_decoder_service.py  media_metadata_service.py  pdf_document.py  pdf_document_view.py  pdf_renderer.py  previewer_registry.py  settings_repository.py  staging_pool_service.py
freeassetfilter/ui/: main_window.py
freeassetfilter/utils/: __init__.py  animation_settings.py  app_logger.py  async_icon_loader.py  color_schemes.json  file_icon_helper.py  fix_encoding.py  global_mouse_monitor.py  icon_utils.py  lut_utils.py  mouse_activity_monitor.py  path_utils.py  perf_metrics.py  subprocess_utils.py  svg_renderer.py  syntax_highlighter.py
scripts/: generate_startup_report.py  qt_capture.py  run_perf_benchmarks.py  startup_profiler.py  test_video_thumbnail_hwaccel.py
tests/: conftest.py  fix_test_imports.py  generate_tests.py  run_tests.py  utils.py
(+338 files in other folders)
